--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ body{
 .header-main{
     background-color:transparent;
     position: absolute;
-    z-index: 5;
+    z-index: 10;
     left: 0;
     right: 0;
 }
@@ -63,6 +63,10 @@ body{
     color: #FFFFFFFF;
     text-transform: uppercase;
     font-weight: 700;
+}
+
+.menu_list-link--active{
+    color: #0066FF;
 }
 .main{
     flex-grow: 1;
@@ -258,4 +262,146 @@ body{
 }
 .important_list-img {
     margin-bottom: 20px;
+}
+.conatcts {
+    margin: 100px auto 150px ;
+}
+.contacts_title {
+    margin-bottom: 19px;
+}
+.contacts_text {
+    Font-weight: 700;
+    Font-size: 24px;
+    text-align: center;
+    margin-bottom: 50px;
+    padding: 0 100px;
+}
+.form {
+    max-width: 580px;
+    display: flex;
+    flex-wrap: wrap;
+    margin:0 auto;
+    justify-content:space-between;
+}
+.form-textarea{
+    width: 100%;
+    margin: 50px 0;
+    padding: 28px 20px;
+    border:1px solid #0066FF;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+    color:#151515;
+    resize: none;
+    min-height: 290px;
+}
+.form-textarea::placeholder{
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+    color:#151515;
+    opacity: 0.5;
+}
+.form-input {
+    max-width: 270px;
+    width: 100%;
+    border: 1px solid #0066FF;
+    padding: 20px;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+    color:#151515
+}
+.form-input::placeholder{
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+    color:#151515;
+    opacity: 0.5;
+}
+.form-btn {
+    padding: 15px 60px;
+    background-color: #151515;
+    margin: 0 auto;
+    border: 0;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+}
+
+.topics {
+    margin-bottom: 150px;
+}
+.topics_items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:40px;
+    margin-bottom: 70px;
+}
+
+.topics_item {
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
+}
+.topics_item-img {
+    margin-bottom: 30px;
+    width: 100%;
+}
+.topics_item-text {
+    font-size: 24px;
+    font-weight: 700;
+    flex-basis: 446px;
+}
+.topics_item-link {
+    color:#FFFFFF;
+    background-color: #0066FF;
+    padding: 4px 20px;
+
+}
+.showmore_link {
+    background-color:#151515 ;
+    color:#FFFFFF ;
+    padding:13px 61px ;
+    text-transform: uppercase;
+    width: 225px;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+}
+.catalog{
+    margin: 100px 0 150px;
+}
+.section_title {
+}
+.tabs {
+}
+.tabs_btn {
+}
+.tabs_btn-item {
+}
+.tabs_btn-item--active {
+}
+.tabs_content {
+}
+.tabs_content-item {
+}
+.car_card {
+}
+.card_img {
+}
+.card_title {
+}
+.card_text {
+}
+.card_price {
+}
+.card_link {
 }
