--- a/style/style.css
+++ b/style/style.css
@@ -296,6 +296,7 @@ body{
     resize: none;
     min-height: 290px;
 }
+l;,e,
 .form-textarea::placeholder{
     font-weight: 400;
     font-size: 16px;
@@ -432,8 +433,38 @@ body{
     margin-bottom:20px ;
 }
 .card_link {
-display: block;
-color: #0066FF;
-border: 1px solid #0066FF;
-border-top: 0;
+    display: block;
+    color: #0066FF;
+    border: 1px solid #0066FF;
+    border-top: 0;
 } 
+.credit{
+    max-width: 580px;
+    margin: 100px auto 150px ;
+}
+.credit_text{
+    padding: 0 10px ;
+}
+.card_form-input {
+    width: 100%;
+    border: 1px solid #0066FF;
+    padding: 20px;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+    color:#151515;
+    margin-top: 5px;
+}
+.card_form-input::placeholder{
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+    color:#151515;
+    opacity: 0.5;
+}
+.credit_btn{
+    display: flex;
+    margin: 60px auto 0;
+}
