--- a/d&m_leasing/core/templates/core/new-cars.html
+++ b/d&m_leasing/core/templates/core/new-cars.html
@@ -33,7 +33,7 @@
                                 <a href="{% url 'finance'%}" class="menu_list-link">FINANCE</a>
                             </li>
                             <li class="menu_list-item">
-                                <a href="#" class="menu_list-link">LEASE VS BUY</a>
+                                <a href="{% url 'l_vs_b' %}" class="menu_list-link">LEASE VS BUY</a>
                             </li>
                             <li class="menu_list-item">
                                 <a href="{%url 'contacts'%}" class="menu_list-link">CONTACT US</a>
