--- a/d&m_leasing/core/templates/core/lease-vs-buy.html
+++ b/d&m_leasing/core/templates/core/lease-vs-buy.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>e-shop</title>
+    <title>Lease vs buy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -18,13 +18,13 @@
         <header class="header">
             <div class="container">
                 <div class="header_inner">
-                    <a href="{% url 'index' %}" class="logo">
+                    <a href="{% url 'index'%}" class="logo">
                         <img src="{% static 'img/logo.svg' %}" alt="logo" class="logo_img">
                     </a>
                     <nav class="menu">
                         <ul class="menu_list">
                             <li class="menu_list-item">
-                                <a href="{% url 'new_cars' %}" class="menu_list-link menu_list-link--active">NEW CARS</a>
+                                <a href="{% url 'new_cars' %}" class="menu_list-link">NEW CARS</a>
                             </li>
                             <li class="menu_list-item">
                                 <a href="https://av.by" class="menu_list-link">PRE-OWNED CARS</a>
@@ -33,10 +33,10 @@
                                 <a href="{% url 'finance'%}" class="menu_list-link">FINANCE</a>
                             </li>
                             <li class="menu_list-item">
-                                <a href="{% url 'l_vs_b' %}" class="menu_list-link">LEASE VS BUY</a>
+                                <a href="{% url 'l_vs_b' %}" class="menu_list-link menu_list-link--active">LEASE VS BUY</a>
                             </li>
                             <li class="menu_list-item">
-                                <a href="{%url 'contacts'%}" class="menu_list-link">CONTACT US</a>
+                                <a href="{% url 'contacts'%}" class="menu_list-link">CONTACT US</a>
                             </li>
                         </ul>
                     </nav>
@@ -45,52 +45,74 @@
         </header>
 
         <main class="main">
-            <section class="catalog">
+
+            <section class="why_list">
                 <div class="container">
-                  <h2 class="section_title">Choose your car</h2>
-                  <div class="tabs">
-                    <div class="tabs_btn">
-                        <button class="tabs_btn-item tabs_btn-item--active"><a href="{% url 'new_cars'%}">Car and Minivan</a></button>
-                      <button class="tabs_btn-item"><a href="{% url 'new_cars_truck' %}">Trucks</a></button>
-                      <button class="tabs_btn-item"><a href="{% url 'new_cars_crossover'%}">Crossovers & SUVs</a></button>
-                      <button class="tabs_btn-item"><a href="{% url 'new_cars_electrified'%}">Electrified</a></button>
-                    </div>
-                    <div class="tabs_content">
-                      <div class="tabs_content-item">
-
-
-                        <div class="car_card">
-                          <img src="{% static 'img/card-1.jpeg' %}" alt="car-card" class="card_img">
-                          <div class="card-content">
-                            <h4 class="card_title">Toyota Crown 2023</h4>
-                            <p class="card_text">starting from $39,900</p>
-                            <p class="card_price">$650/mo</p>
-                          </div>
-                          <a href="https://www.drive.ru/brands/mercedes/models/2019/maybach_gls/600_4matic" class="card_link">see details</a>
-                        </div>
-
-
-                          {% for car in cars %}
-                          <div class="car_card">
-                          <img style="border: 1px solid #0066FF" src="{{car.img.url}}" alt="car-card" class="card_img">
-                          <div class="card-content">
-                            <h4 class="card_title">{{ car.name }}</h4>
-                            <p class="card_text">starting from ${{car.price}}</p>
-                            <p class="card_price">${{car.month_price}}/mo</p>
-                          </div>
-                          <a href="https://www.drive.ru/brands/mercedes/models/2019/maybach_gls/600_4matic" class="card_link">see details</a>
-                        </div>
-                          {% endfor %}
-
-
-
-
-                      </div>
-                    </div>
-                  </div>
-                  <a href="#" class="showmore_link">SHOW MORE</a>
+                    <h2 class="section_title">Why Lease with D&M?</h2>
+                    <ul class="why_list-list">
+                        <li class="why_list-item">
+                            <img src="{% static 'img/Top-Dealers.svg' %}" alt="Top Dealers" class="why_list-img">
+                            <h3 class="why_list-title">Top Dealers</h3>
+                            <p class="why_list-text">TrueCar Certified Dealers compete for your business by providing
+                                discounted pricing on in-stock inventory.</p>
+                        </li>
+                        <li class="why_list-item">
+                            <img src="{% static 'img/Discounted-Pricing.svg' %}" alt="Discounted Pricing" class="why_list-img">
+                            <h3 class="why_list-title">Discounted Pricing</h3>
+                            <p class="why_list-text">View local inventory from the comfort of home and get access to
+                                guaranteed savings on the car of your choice.</p>
+                        </li>
+                        <li class="why_list-item">
+                            <img src="{% static 'img/Lower-Payments.svg' %}" alt="Lower Payments" class="why_list-img">
+                            <h3 class="why_list-title">Lower Payments</h3>
+                            <p class="why_list-text">Get discounted pricing when you shop for a car or truck using
+                                TrueCar and save on your lease payment.</p>
+                        </li>
+                        <li class="why_list-item">
+                            <img src="{% static 'img/Easy-upgade.svg' %}" alt="Easy Upgrade" class="why_list-img">
+                            <h3 class="why_list-title">Easy Upgrade</h3>
+                            <p class="why_list-text">Easy to upgrade to the newest vehicle model every few years if you
+                                would like to be modern and comfortable</p>
+                        </li>
+                    </ul>
                 </div>
-              </section>
+            </section>
+
+            <section class="how_list">
+                <div class="container">
+                    <div class="how_list-inner">
+                        <h2 class="section_title">How Does Leasing Work?</h2>
+                        <p class="how_list-text">Leasing a vehicle is essentially entering into a long term rental agreement for that vehicle. Unlike a traditional car purchase, you don’t actually own the vehicle. Instead, a leasing company purchases the vehicle from the dealer on your behalf and then you make monthly payments to the leasing company for the duration of your lease. Some leases however, do provide the option to purchase the vehicle at the end of the lease.</p>
+                <h4 class="section_title-mini">Main Differences Between Lease and Buy:</h4>
+                <ol class="how_list-list">
+                    <li class="how_list-item">
+                        A lease is when a person rents or leases an asset from another person for a certain amount of time and money
+                    </li>
+                    <li class="how_list-item">
+                        In a lease, the asset’s ownership and possession belong to the person who rented it through an agreement, however when a person buys an item from a seller
+                    </li>
+                    <li class="how_list-item">
+                        The cost of leasing an asset is significantly lower than the cost of buying it, whereas the cost of buying an asset is extremely high.
+                    </li>
+                    <li class="how_list-item">
+                        A person who leases an asset from its owner has it for the duration of the signed contract, but a person who buys it has it for an indeterminate amount of time
+                    </li>
+                    <li class="how_list-item">
+                        A lessee (who leases the asset) and a lessor (who owns the asset) are involved in a lease, whereas a buyer and a seller are involved in a buying.
+                    </li>
+                </ol>
+
+                        <p class="how_list-text">Lease contracts are a commitment and ending them early can be difficult and expensive so it is important to consider your circumstances carefully before you decide.</p>
+                    </div>
+                </div>
+            </section>
+
+
+
+
+
+
+
 
             <section class="topics">
                 <div class="container">
@@ -211,6 +233,6 @@
         </footer>
 
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 </html>
